--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:api": "pm2 start src/api.js --name api --watch",
     "dev:bot": "pm2 start src/bot.js --name bot --watch",
     "logs": "pm2 logs",
+    "monit": "pm2 monit",
     "stop:api": "pm2 stop api",
     "restart:api": "pm2 restart api",
     "stop:bot": "pm2 stop bot",
@@ -24,6 +25,7 @@
     "google-auth-library": "^0.9.9",
     "googleapis": "^14.1.0",
     "telegraf": "^3.3.0",
+    "telegraf-googlesheets": "^0.1.3",
     "toml-require": "^1.1.0",
     "xtend": "^4.0.1"
   },
