--- a/package.json
+++ b/package.json
@@ -24,22 +24,16 @@
     "express": "^4.14.0",
     "googleapis": "^14.1.0",
     "telegraf": "^3.3.0",
-    "telegraf-googlesheets": "^0.1.3",
+    "telegraf-googlesheets": "^0.2.0",
     "toml-require": "^1.1.0",
     "xtend": "^4.0.1"
   },
   "eslintConfig": {
-    "extends": "mnmo",
-    "rules": {
-      "array-bracket-spacing": [
-        "error",
-        "always"
-      ]
-    }
+    "extends": "mnmo"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
-    "eslint-config-mnmo": "^2.0.2",
+    "eslint-config-mnmo": "^3.0.0",
     "pm2": "^2.0.19"
   }
 }
