--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "googleapis": "^14.1.0",
     "telegraf": "^3.3.0",
     "telegraf-googlesheets": "^0.3.0",
+    "telegraf-logfile": "^0.2.0",
     "toml-require": "^1.1.0",
     "xtend": "^4.0.1"
   },
