--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "googleapis": "^14.1.0",
+    "handlebars": "^4.0.5",
     "telegraf": "^3.3.0",
     "telegraf-googlesheets": "^0.3.0",
     "telegraf-logfile": "^0.2.0",
