--- a/config-sample.toml
+++ b/config-sample.toml
@@ -24,9 +24,6 @@ scopes = [
     "https://www.googleapis.com/auth/drive.readonly"
 ]
 
-[path]
-tempFolder =
-
 [telegram]
 token = ""
 username = ""
@@ -39,37 +36,41 @@ url = ""
 [sheets.user]
 # a table with 4 columns to use for the application for
 # first column is the variable, second is a short caption
-# third is an input question and optionally a 4th column$
-# with multiple choice answer separated by the | character$
-questions = "Questions User!A2:D"$
-$
-# remember to leave 3 extra adjacent columns free$
-# for telegram metadata and include those extra 3 columns in the range$
-# example, if your form has 9 questions, from A to I, your$
-# range needs to go from A to L$
-answers = "Answers Users!A2:L2"$
-$
-# what range to look for user application status$
-status = "'Users Statuses'!A2:C"$
-$
-# Which columns to look for the userId and approved state.$
-# Example: if the status column is A, the value is 0$
-# if the status column is H, the value is 7$
-statusUserId = 0$
-statusColumn = 1$
-$
-# The value in the status column to consider an user approved$
-approvedValue = "Approved"$
-$
-[sheets.school]$
-questions = "Questions School!A2:D11"$
+# third is an input question and optionally a 4th column
+# with multiple choice answer separated by the | character
+questions = "Questions User!A2:D"
+
+# remember to leave 3 extra adjacent columns free
+# for telegram metadata and include those extra 3 columns in the range
+# example, if your form has 9 questions, from A to I, your
+# range needs to go from A to L
+answers = "Answers Users!A2:L2"
+
+# what range to look for user application status
+status = "'Users Statuses'!A2:C"
+
+# Which columns to look for the userId and approved state.
+# Example: if the status column is A, the value is 0
+# if the status column is H, the value is 7
+statusUserId = 0
+statusColumn = 1
+
+# The value in the status column to consider an user approved
+approvedValue = "Approved"
+
+[sheets.school]
+questions = "Questions School!A2:D11"
 
 # Google drive variables
 [drive]
-#
-## This the root ID number that can be found on folder url.
-## ie:. https://drive.google.com/drive/some_path/{{rootId}}
+
+# This the root ID number that can be found on folder url.
+# ie:. https://drive.google.com/drive/some_path/{{rootId}}
 rootId = ""
+
+# path variable used inside program to save temp data.
+# don't forget to create this folder
+tempFolder = ""
 
 # Those are the parameters used when making the request to google drive's
 # API service
