--- a/config-sample.toml
+++ b/config-sample.toml
@@ -3,6 +3,7 @@ port = 58337
 
 [webhook]
 url = "https://YOUR_APP_NAME.herokuapp.com/"
+path = "your-super-secret-path"
 port = 8070
 
 # winston File transport options
