eslint rules exception to allow mutation of ctx.state and ctx.session

--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "xtend": "^4.0.1"
   },
   "eslintConfig": {
-    "extends": "mnmo"
+    "extends": "mnmo",
+    "rules": {
+      "no-param-reassign": [ "error", { "props": false } ]
+    }
   },
   "devDependencies": {
     "eslint": "^3.9.1",
