--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "googleapis": "^14.1.0",
     "handlebars": "^4.0.5",
     "telegraf": "^3.3.0",
-    "telegraf-googledrive": "^0.4.0",
+    "telegraf-googledrive": "^0.4.1",
     "telegraf-googlesheets": "^0.5.1",
     "telegraf-logfile": "^0.2.0",
     "toml-require": "^1.1.0",
@@ -38,7 +38,12 @@
   "eslintConfig": {
     "extends": "mnmo",
     "rules": {
-      "no-param-reassign": [ "error", { "props": false } ]
+      "no-param-reassign": [
+        "error",
+        {
+          "props": false
+        }
+      ]
     }
   },
   "devDependencies": {
